--- a/src/package.json
+++ b/src/package.json
@@ -7,11 +7,12 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.12",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.50",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.12",
         "vite": "^7.0.4"
     }
 }
